cmake_minimum_required(VERSION 3.21)
include($ENV{XMOS_CMAKE_PATH}/xcommon.cmake)
project(lib_i2s_examples)
add_subdirectory(app_i2s_frame_loopback_demo)
add_subdirectory(app_i2s_frame_slave_loopback_demo)
add_subdirectory(app_simple_i2s_frame_master)
add_subdirectory(app_simple_i2s_frame_master_4b)
add_subdirectory(app_simple_i2s_frame_master_external_clock)
add_subdirectory(app_simple_i2s_frame_slave)
add_subdirectory(app_simple_tdm_master)
add_subdirectory(app_tdm_loopback_demo)
