cmake_minimum_required(VERSION 3.21)
include($ENV{XMOS_CMAKE_PATH}/xcommon.cmake)
project(lib_i2s_tests)
add_subdirectory(backpressure_test)
add_subdirectory(i2s_frame_master_test)
add_subdirectory(i2s_frame_slave_test)
add_subdirectory(i2s_frame_master_4b_test)
add_subdirectory(i2s_frame_slave_4b_test)
add_subdirectory(i2s_frame_master_external_clock_test)
add_subdirectory(i2s_frame_master_external_clock_4b_test)
